refactoring Cargoflow integration replace to Open Feign Client